infrastructure/kitos-dev/kitos/services/kitos-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    easyhosting.io/service-reference: Dockerfile
    easyhosting.io/service-unique-id: bb461bb7-2424-411d-8f62-12edde1831f0
    easyhosting.io/easy-hosting-domain-name: bb461bb7-2424-411d-8f62-12edde1831f0.kitos-dev.strongminds.easyhosting.strongminds.dev
  labels:
    app: kitos-frontend
  name: kitos-frontend
  namespace: kitos
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kitos-frontend
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: monitoring/sidecar-otel-collector
      labels:
        app: kitos-frontend
    spec:
      containers:
      - env:
        - name: BACKEND_URL
          value: http://kitos-api.kitos
        image: ghcr.io/strongminds/kitos_frontend-kitos-frontend:sha-8ba66bb1028a4a65efb86d8a3a528c5b3b73cf60
        name: kitos-frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 100m
      imagePullSecrets:
      - name: 90d73529-a238-405b-a079-3eea2e8e36e6
