infrastructure/kitos-dev/kitos/services/kitos-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitos-frontend
  namespace: kitos
spec:
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kitos-frontend
  type: ClusterIP
