infrastructure/kitos-dev/kitos/services/kitos-frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: kitos-frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: kitos
    app.kubernetes.io/managed-by: easy-hosting
    network-policy.kubernetes.io/type: egress
    network-policy.kubernetes.io/purpose: allow-egress
  name: kitos-frontend-allow-all-egress
  namespace: kitos
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app: kitos-frontend
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: kitos-frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: kitos
    app.kubernetes.io/managed-by: easy-hosting
    network-policy.kubernetes.io/type: ingress
    network-policy.kubernetes.io/purpose: allow-namespace
  name: kitos-frontend-allow-from-namespace
  namespace: kitos
spec:
  egress:
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: kitos-frontend
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: kitos-frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: kitos
    app.kubernetes.io/managed-by: easy-hosting
    network-policy.kubernetes.io/type: ingress
    network-policy.kubernetes.io/purpose: allow-lb
  name: kitos-frontend-allow-public
  namespace: kitos
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: kitos-frontend
  policyTypes:
  - Ingress
